# short-link-with-click-aggregator-python

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml  pytest-e2e.ini  pytest-integration.ini  pytest-unit.ini
alembic/: env.py
alembic/versions/: 7e1d2a3b9c10_create_shortlink_table.py  b3c4d5e6f7a8_create_click_table.py
docker/dev/: docker-compose.yml  env.example
docker/dev/api/: Dockerfile  entrypoint.sh
docker/dev/batch/: Dockerfile
docker/dev/celery/: Dockerfile
docker/dev/proxy/: Dockerfile  default.conf.tpl  nginx.conf  run.sh  uvicorn_proxy.conf
docker/dev/redis-cache/: Dockerfile  healthcheck.sh  redis.conf.tpl  users.acl.tpl
docker/dev/redis-clicks/: entrypoint.sh  healthcheck.sh  redis.conf.tpl  users.acl.tpl
docker/dev/redis-codes/: entrypoint.sh  healthcheck.sh  redis.conf.tpl  users.acl.tpl
locust/: count.py  create-short-link.py  redirect.py
scripts/: create_short_link_partitions.py
src/main/batch/: index.py
src/main/server/: index.py
src/main/worker/: index.py
src/shared/constants/: base.py  base_62.py  base_63.py  length.py
src/shared/domain/: entity.py  event.py  notification.py
src/shared/handlers/: handler.py  mediator.py
src/shared/infra/: celery_broker.py  celery_mediator.py  in_memory_mediator.py  redis_database.py  sqlalchemy_connection_manager.py  sqlalchemy_database.py
src/shared/usecases/: connection_manager.py  usecase.py
src/shared/utils/: encode_fixed_base62.py  encode_fixed_base62_unit_test.py
src/short_link/domain/: shortlink_aggregate.py  (+1 more)
(+100 files in other folders)
